--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "cocktail-menu",
   "version": "0.1.0",
+  "author": "Joe Simko",
+  "description": "A web application that helps users identify the mixed drinks they are able to make from their available items, as well as find new drinks that they may want to explore.",
   "private": true,
+  "type": "module",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -10,6 +13,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
+    "realm": "^11.5.0",
+    "realm-web": "^2.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
